Fix bug must scroll to reach .portfolio-button on mobile chrome New versions of mobile Chrome and Safari ignore the browser bar when calculating vh. As such, anything calculated in vh is going to be pushed further down the screen than intended. Re-positioned .portfolio-button a specific number of pixels from the bottom, instead of calculating the desired distance from the top using vh.

--- a/style/style.css
+++ b/style/style.css
@@ -134,7 +134,7 @@ header {
   font: normal 700 18px lato, sans-serif;
   left: 0;
   right: 0;
-  top: calc(100vh - 61px);
+  bottom: 30px;
 } 
 #portfolio-button {
   color: rgb(75, 75, 75);
@@ -359,7 +359,7 @@ button {
     padding: 6px 16px 6px;
   }
   .portfolio-button {
-    top: calc(100vh - 93px);
+    bottom: 54px;
   }
   .name {
     padding-left: 20%;
